[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12.23", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
server = { path = "../server" }
dotenvy = "0.15.7"
serde_json = "1.0.143"
